# mqtt-client

./: CMakeLists.txt
include/: ICommand.h  MQTTMngr.h  barecode.h
src/: MQTTMngr.cpp  barecode.cpp  main.cpp
